[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paretoset"
dynamic = ["version", "readme", "dependencies"]
description = "Compute the Pareto (non-dominated) set, i.e., skyline operator/query."
authors = [
    {name = "tommyod", email = "tommy.odland@gmail.com"},
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/tommyod/paretoset"
Repository = "https://github.com/tommyod/paretoset.git"

[tool.setuptools.dynamic]
version = {attr = "paretoset.__version__"}
readme = {file = ["README.md"], content-type = "text/markdown"}
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["."]
include = ["paretoset*"]
exclude = ["contrib", "docs", "tests"]

[tool.setuptools.package-data]
"paretoset" = ["templates/*", "*.tex", "*.html"]
